# jdf-stt

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  LICENSE  README.md  lefthook.yml  pyproject.toml  stt-en-clipboard-fast.bat  stt-en-clipboard-fast.sh  stt-en-clipboard-timeout.bat  stt-en-clipboard-timeout.sh  stt-en-clipboard.bat  stt-en-clipboard.sh  stt-en-file.bat  stt-en-file.sh  stt-pt-clipboard-fast.bat  stt-pt-clipboard-fast.sh  stt-pt-clipboard-timeout.bat  stt-pt-clipboard-timeout.sh  stt-pt-clipboard.bat  stt-pt-clipboard.sh  stt-pt-file.bat  stt-pt-file.sh
src/: __init__.py  __main__.py  audio.py  cli.py  clipboard.py  transcribe.py
whisper/: .gitignore  README.md
