[project]
name = "stt"
version = "1.0.0"
description = "Speech-to-text tool using whisper.cpp - Pure Python implementation"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.5.1",
    "scipy>=1.14.0",
    "pyperclip>=1.9.0",
    "numpy>=1.24.0",
]

[project.scripts]
stt = "stt.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt"]

[dependency-groups]
dev = []
